# dotmod

./: README.md  pyproject.toml
dotmod/: core.py
