[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dotmod"
version = "0.1.0"
description = "Performs immutable modifications on nested data using dot paths."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "A. Coder", email = "acoder@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["dotget", "dotstar", "dotquery"]

[project.urls]
Homepage = "https://github.com/user/dot-ecosystem"
Issues = "https://github.com/user/dot-ecosystem/issues"